# single-variable-algebra-compiler

./: Cargo.toml  README.md  Turing completeness.md  index.html  tm2sva.html  wasm.js  wasm_bg.wasm
.cargo/: config.toml
src/: decimal_crate.rs  lib.rs  main.rs
