[package]
name = "single-variable-algebra-compiler"
version = "0.1.3"
authors = ["Armin Schäfer"]
description = "A compiler for the minimalistic programming language single-variable-algebra."
repository = "https://github.com/772/single-variable-algebra-compiler"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"
categories = ["compilers"]
keywords = ["compiler"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "Text"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastnum = "0.7.2"
web-sys = { version = "0.3.77", features = ["HtmlTextAreaElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dec = "0.4"
